# FairEmail

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FAQ.md  index.html  ralph.sh
app/: build.gradle
data/: providers.json
docs/: architecture.md  provider-database-format.md
docs/epics/: 0.0-backend-implementation-decisions.md  0.0-backend-implementation.md  1.1-unlimited-accounts.md  1.2-unlimited-identities-per-account.md  1.3-quick-setup-wizard.md  1.4-manual-server-configuration.md  1.5-oauth2-sign-in.md  1.6-authentication-methods.md  1.7-pre-installed-provider-database.md  1.8-account-identity-folder-coloring-avatars.md  1.9-account-categories.md  10.1-no-telemetry-by-default.md  10.2-no-third-party-servers.md  12.1-local-contact-store.md  14.6-system-mailto-handler.md  2.1-two-way-imap-synchronization.md  2.2-special-folder-auto-detection.md  2.3-per-folder-sync-settings.md  2.4-folder-subscription-management.md  2.5-auto-sync-newly-added-folders.md  2.6-hide-system-folders.md  2.7-folder-colors-and-per-folder-unread-counters.md  2.8-manual-folder-operations.md  3.1-unified-inbox.md  3.10-external-image-confirmation.md  3.11-tracker-image-detection.md  3.12-link-confirmation-sanitization.md  3.13-authentication-results-display.md  3.14-bimi-logo-display.md  3.15-conversation-actions.md  3.16-per-message-actions.md  3.17-show-original-headers-source-parsed-html-alternative-text.md  3.18-charset-override.md  3.2-conversation-threading.md  3.3-reading-pane-layouts.md  3.4-auto-expand-first-latest-unread-message.md  3.5-mark-as-read-on-view-on-scroll-or-never.md  3.6-safe-html-view.md  3.7-original-raw-message-view.md  3.8-reformatted-plain-text-view.md  (+13 more)
reverse-engineering/: high-level-features.md  information.locations.md
src/: main.rs
src/core/: account.rs  account_creation.rs  account_order.rs  account_review.rs  auth_conversion.rs  auth_error.rs  auth_mechanism.rs  auto_config.rs  browser_selection.rs  certificate.rs  connection_log.rs  connection_state.rs  connection_test.rs  connectivity.rs  content_store.rs  copy_message.rs  credential_log.rs  credential_store.rs  delete_account.rs  delete_message.rs  detect_new_messages.rs  detection_failure.rs  detection_progress.rs  discovery_pipeline.rs  dns_discovery.rs  duplicate_account.rs  ehlo.rs  export_accounts.rs  field_validation.rs  folder_setup.rs  full_sync_fallback.rs  graph_send.rs  idle_manager.rs  imap_check.rs  import_accounts.rs  inbound_test.rs  inbound_test_diagnostics.rs  ispdb_discovery.rs  mark_read.rs  message.rs  (+42 more)
src/services/: account_store.rs  connection_log_store.rs  connection_tester.rs  connectivity_service.rs  database.rs  dns_resolver.rs  export_service.rs  folder_store.rs  folder_sync.rs  fs_content_store.rs  identity_store.rs  idle_service.rs  imap_checker.rs  (+31 more)
tools/: epic-to-user-stories-loop.sh  epic-to-user-stories-prompt.md  reverse-engineer-loop.sh  reverse-engineer-prompt.md
(+578 files in other folders)
