[package]
name = "alarm-clock"
version = "0.1.0"
edition = "2021"

[features]
default = ["ui"]
ui = ["dep:gtk4", "dep:libadwaita", "dep:glib", "dep:gettext-rs"]

[dependencies]
gtk4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", features = ["v1_5"], optional = true }
glib = { version = "0.20", optional = true }
gettext-rs = { version = "0.7", features = ["gettext-system"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
