[package]
name = "fairmail-linux"
version = "0.1.0"
edition = "2021"

[features]
default = ["ui"]
ui = ["dep:gtk4", "dep:libadwaita", "dep:glib", "dep:gettext-rs"]

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"], optional = true }
libadwaita = { version = "0.7", features = ["v1_5"], optional = true }
glib = { version = "0.20", optional = true }
gettext-rs = { version = "0.7", features = ["gettext-system"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
secret-service = { version = "4", features = ["crypto-rust"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
