[package]
name = "fairmail-linux"
version = "0.1.0"
edition = "2021"

[features]
default = ["ui"]
ui = ["dep:gtk4", "dep:libadwaita", "dep:glib", "dep:gettext-rs"]

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"], optional = true }
libadwaita = { version = "0.7", features = ["v1_5"], optional = true }
glib = { version = "0.20", optional = true }
gettext-rs = { version = "0.7", features = ["gettext-system"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
secret-service = { version = "4", features = ["crypto-rust"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
native-tls = { version = "0.2", features = ["vendored"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
sha2 = "0.10"
hex = "0.4"
mail-parser = "0.9"
html2text = "0.12"
notify-rust = "4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
